[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "runtime-async-std",
] }
actix-web = "^4"
actix-cors = "0.7"
serde_derive = "1.0"
uuid = { version = "1.10", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
time = "0.3"
